# Agno-Agent-Framework

./: .gitignore  README.md  env.template  pyproject.toml  requirements.txt  start.py
config/: agents.yaml  teams.yaml  workflows.yaml
document/: DEVELOPMENT_RECORD.md
scripts/: check_python_version.py  create_env_files.py
src/: __init__.py  main.py
src/agentos/: __init__.py
src/api/: __init__.py  dependencies.py  models.py  router.py
src/database/: __init__.py  business_db.py  business_query_tools.py  config.py  connection.py  models.py  query_tools.py
src/engine/: __init__.py
src/engine/agents/: __init__.py  db_agent.py  intent_agent.py  judge_agent.py  output_agent.py
src/engine/teams/: __init__.py  con_agent.py  leader_agent.py  pro_agent.py  team.py
src/engine/tools/: database_tools.py  vector_tools.py
src/engine/workflows/: __init__.py  workflow.py
src/knowledge/: __init__.py  config.py
src/models/: __init__.py  model_config.py
src/utils/: __init__.py  config_loader.py  ip_env_mapping.py  logger_config.py  yaml_agent_loader.py
src/vector/: __init__.py  connection.py  query_tools.py
tests/: test_database.py  test_ip_detection.py  test_milvus.py
